--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -28,11 +28,22 @@ video{
 
 }
 
-.overlay{
-  position: absolute;
-  top:0;
-  left:0;
-  width: 100%;
-  height: 100;
-  background-color: black;
+.startbutton{
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+}
+
+.startbutton:hover {background-color: #3e8e41}
+
+.startbutton:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
