--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,6 +4,8 @@
   background-color: #121619;
   display: flex;
   flex-direction: row;
+  position: relative;
+  z-index: 1;
 }
 
 .navbar .leftSide {
