--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,17 +1,16 @@
 .about {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction:column;
+
   }
   
   .aboutTop {
+    
     width: 100%;
-    height: 45%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    height: 200%;
+
   }
   
   .aboutBottom {
@@ -19,7 +18,8 @@
     flex-direction: column;
     height: 55%;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
+   
   }
   
   .aboutBottom p {
@@ -28,10 +28,23 @@
   
   .about .aboutBottom h1 {
     font-weight: 100;
-    font-size: 70px;
+    font-size: 50px;
     color: black;
     height: 30px;
     display: flex;
     justify-content: center;
     transform: translateY(-40px);
+  }
+  .about .aboutBottom h3 {
+    font-weight: 100;
+    font-size: 30px;
+    color: black;
+    margin-top:20px;
+    margin-bottom:10px;
+
+  }
+
+  .about .aboutBottom p {
+    font-size: 15px;
+
   }
