--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family:   Goudy Bookletter 1911, sans-serif;
+  font-family:   Arial, Helvetica, sans-serif
 }
 
 .home{
