--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,15 +1,20 @@
 .about {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     display: flex;
     flex-direction:column;
 
   }
   
-  .aboutTop {
-    
-    width: 100%;
-    height: 200%;
+  .logo {
+    width: 25%;
+    height: 100%;
+   
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 
   }
   
@@ -30,21 +35,16 @@
     font-weight: 100;
     font-size: 50px;
     color: black;
-    height: 30px;
-    display: flex;
+    height: 150px;
+
     justify-content: center;
     transform: translateY(-40px);
   }
-  .about .aboutBottom h3 {
-    font-weight: 100;
-    font-size: 30px;
-    color: black;
-    margin-top:20px;
-    margin-bottom:10px;
+ 
 
-  }
 
   .about .aboutBottom p {
-    font-size: 15px;
+    font-size: 20px;
+    line-height: 35px;
 
   }
