--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -20,7 +20,7 @@
   .aboutBottom {
     display: flex;
     flex-direction: column;
-    height: 55%;
+    height: 60%;
     align-items: center;
     margin-top: 30px;
    
@@ -34,10 +34,10 @@
     font-weight: 100;
     font-size: 50px;
     color: black;
-    height: 150px;
+    height: 100px;
 
     justify-content: center;
-    transform: translateY(-40px);
+    transform: translateY(-50px);
   }
  
 
@@ -46,4 +46,11 @@
     font-size: 20px;
     line-height: 35px;
 
+  }
+
+  .personal{
+  
+    width: 60%;
+    height: 100%;  
+    
   }
