--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,3 +1,6 @@
+
+
+
 .about {
     width: 100%;
     height: 120vh;
@@ -8,11 +11,12 @@
   
   .logo {
     
-    width: 25%;
-    height: 100%;
-    text-align: center;
-    margin: auto;
+    width: auto;
+    height: auto;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+
     
 
   }
@@ -26,10 +30,7 @@
    
   }
   
-  .aboutBottom p {
-    width: 1100px;
-  }
-  
+
   .about .aboutBottom h1 {
     font-weight: 100;
     font-size: 50px;
@@ -45,6 +46,7 @@
   .about .aboutBottom p {
     font-size: 20px;
     line-height: 35px;
+    width: 1100px;
 
   }
 
@@ -54,3 +56,5 @@
     height: 100%;  
     
   }
+
+  
