--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,7 +3,7 @@
 
 .about {
     width: 100%;
-    height: 120vh;
+    height: 170vh;
     display: flex;
     flex-direction:column;
 
@@ -20,6 +20,16 @@
     
 
   }
+
+  .staff {
+    float: left;
+  width: 33.33%;
+  padding: 5px;
+    box-sizing: border-box;
+    content: "";
+    clear: both;
+    display: table;
+  }
   
   .aboutBottom {
     display: flex;
@@ -32,7 +42,7 @@
   
 
   .about .aboutBottom h1 {
-    font-weight: 100;
+    font-weight: 100px;
     font-size: 50px;
     color: black;
     height: 100px;
@@ -58,3 +68,13 @@
   }
 
   
+  .gallery-image {
+    img {
+      width: 32%; 
+      height: 500px; 
+      margin: 0; 
+      padding: 7px;
+      border-radius: 8%;
+    }
+  }
+
