--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,7 +3,7 @@
 
 .about {
     width: 100%;
-    height: 170vh;
+    height: 200vh;
     display: flex;
     flex-direction:column;
 
@@ -57,6 +57,7 @@
     font-size: 20px;
     line-height: 35px;
     width: 1100px;
+    padding: 20px;
 
   }
 
