--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,6 +6,7 @@
     height: 200vh;
     display: flex;
     flex-direction:column;
+    background-color: white;
 
   }
   
@@ -23,8 +24,8 @@
 
   .staff {
     float: left;
-  width: 33.33%;
-  padding: 5px;
+    width: 33.33%;
+    padding: 5px;
     box-sizing: border-box;
     content: "";
     clear: both;
@@ -45,10 +46,9 @@
     font-weight: 100px;
     font-size: 50px;
     color: black;
-    height: 100px;
-
+    height: 5px;
     justify-content: center;
-    transform: translateY(-50px);
+    transform: translateY(-90px);
   }
  
 
@@ -57,7 +57,7 @@
     font-size: 20px;
     line-height: 35px;
     width: 1100px;
-    padding: 20px;
+    padding: 15px;
 
   }
 
