--- a/src/styles/Happenings.css
+++ b/src/styles/Happenings.css
@@ -15,4 +15,45 @@ p{
 
 
 
+.carousel{
+    width:100%;
+    height: 800px;
+    background-color: black;
+
+}
+
+.carouselInner{
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+
+}
+
+.carouselInner .left{
+    flex:5%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.4); 
+    display: grid;
+    place-items: center;
+    color: white;
+
+}
+
+.carouselInner .center{
+    flex:90%;
+    height: 100%;
+ 
+}
+
+.carouselInner .right{
+    flex:5%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.4); 
+    display: grid;
+    place-items: center;
+     color: white;
+}
 
