--- a/src/styles/Happenings.css
+++ b/src/styles/Happenings.css
@@ -1,11 +1,11 @@
-h1{
-    font-size: 50px;
+.happenings h1{
+    font-size: 60px;
     text-align: center;
     padding: 80px;
 }
 
-p{
-    font-size: 20px;
+.happenings p{
+    font-size: 25px;
     line-height: 35px;
     padding: 20px;
     text-align: center;
