--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 
 .App {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
-
-  
 }
 
 body {
