fix månadens burgare

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -106,6 +106,8 @@ s
 
 .hamburgerMonth{ 
   background-color: black;
+  height: 70vh;
+  width: 100%;
 img {
     width: 30%; 
     height: 450px; 
@@ -117,7 +119,7 @@ img {
 
 .hamburgerMonth p{
   font-size: 25px;
-  margin-left: 60vh;
+  margin-left: 65vh;
   color: white;
   position: relative; 
   top: -400px;
@@ -132,3 +134,26 @@ text-align: center;
 
 }
 
+.hamburgerButton{
+  background-color: #04AA6D; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  border-radius: 20px;
+  margin-left: 50%;
+  position: relative;
+  top: -30vh;
+}
+
+.hamburgerButton:hover {background-color: #3e8e41}
+
+
+.hamburgerButton:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
