--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -70,13 +70,15 @@ h5{
 
 .aboutUs .aboutParagraph{
   line-height: 40px;
-  font-size: 30px;
+  font-size: 40px;
+  height: 10vh;
+  line-height: 50px;
 }
 
 .aboutUs{
   background-color: rgb(249, 216, 209);
-  padding: 300px;
- 
+  padding: 200px;
+
  
 }
 
