--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,101 @@
-.contact h1{
-    font-size: 50px;
+*{
+margin:0px;
+padding: 0px;
+box-sizing: border-box;
+}
+
+.contact{
+    min-height: 100vh;
+    background-color: azure;
+    padding: 50px;
     text-align: center;
-    padding: 20px;
+}
+
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.container h2{
+    font-size: 40px;
+    margin-bottom: 50px;
+    color: black;
+}
+
+.contact-wrapper{
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+   grid-gap: 30px;
+}
+
+.contact-form{
+    text-align: left;
+}
+
+.contact-form h3{
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: purple;
+}
+
+.form-group{
+    margin-bottom: 20px;
+
+}
+
+input, textarea {
+    width:100%;
+    padding: 12px;
+    border-radius: 8px;
+    border: none;
+    background-color: bisque;
+  color: black;
+}
+
+input:focus,
+textarea:focus{
+
+    outline:none;
+    box-shadow: 0 0 8px red;
+}
+
+button{
+    display: inline-block;
+    padding: 22px 34px;
+    background-color: #04AA6D; 
+    color:white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+
+}
+
+button:hover{
+    background-color: lightgreen;
+}
+
+.contact-info{
+    text-align: left;
+    
+}
+
+.contact-info h3{
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.contact-info p{
+    margin-bottom: 10px;
+    color: bla#555;
+}
+
+@media screen and  (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+
+    .contact-wrapper{
+        grid-template-columns: 1fr;
+    }
+    
 }
