--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif
 
   
 }
