--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family:   Arial, Helvetica, sans-serif
-}
+
 
 .home{
 width: 100%;
@@ -191,3 +187,41 @@ font-size: 40px;
   color: black;
 }
 
+.opening-hours{
+  line-height: 30px;
+padding-bottom: 20px;
+
+}
+
+.opening-hours p{
+  font-size: 16px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.opening-hours h4{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.opening-hours h3{
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+
+
+.logotype{
+
+  img {
+    
+  width: auto;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 250px;
+  width: 250px;
+}
+}
