--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,5 +1,38 @@
-.menu h1{
-    color: red;
-    text-align: center;
-    padding: 10px;
-}
+.menu {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+ 
+  }
+  
+  .category {
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    margin-top: 0;
+  }
+  
+  h3 {
+    margin-top: 0;
+    font-size: 18px;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  li {
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  
+  li:hover {
+    color: #007bff;
+    text-decoration: underline;
+  }
+  
