--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -220,6 +220,12 @@ padding-bottom: 20px;
   padding-bottom: 10px;
 }
 
+.open{
+
+font-size: 20px;
+font-weight: 600;
+}
+
 
 .logotype{
 
@@ -234,3 +240,4 @@ padding-bottom: 20px;
   width: 250px;
 }
 }
+
