--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -22,31 +22,23 @@
 
   }
 
-  .staff {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-    box-sizing: border-box;
-    content: "";
-    clear: both;
-    display: table;
-  }
+
   
   .aboutBottom {
     display: flex;
     flex-direction: column;
     height: 60%;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 5rem;
    
   }
   
 
   .about .aboutBottom h1 {
-    font-weight: 100px;
-    font-size: 50px;
+    font-weight: 400;
+    font-size: 4rem;
     color: black;
-    height: 5px;
+    height: 2rem;
     justify-content: center;
     transform: translateY(-90px);
   }
@@ -54,27 +46,19 @@
 
 
   .about .aboutBottom p {
-    font-size: 25px;
-    line-height: 35px;
-    width: 1100px;
-    padding: 15px;
-
-  }
-
-  .personal{
-  
+    font-size: 1.7rem;
     width: 60%;
-    height: 100%;  
-    
+    padding: 1rem;
+
   }
 
-  
-  .gallery-image {
+
+    .gallery-image {
     img {
       width: 32%; 
-      height: 500px; 
+      height: 30em; 
       margin: 0; 
-      padding: 7px;
+      padding: 0.8rem;
       border-radius: 8%;
     }
   }
