--- a/src/styles/Dips.css
+++ b/src/styles/Dips.css
@@ -1,6 +1,19 @@
-.coffee-selection img {
+.container-dips img {
 
     width: 100%;
     height: auto;
     border-radius: 10px;
 }
+
+.grid-container{
+    max-width: 1310px;
+       margin:0 auto;
+       padding: 0 50px;
+   }
+   
+
+   .container-dips{
+    max-width: 1310px;
+    margin:0 auto;
+    padding: 0 50px;
+   }
