--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,43 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 
   
 }
 
-body {
+.heading-secondary{
 
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden; 
+  color: mediumaquamarine;
+  font-size: 30px;
+  padding-top: 20px;
 }
- 
 
+*{
+
+}
+
+ul{
+  list-style-type: none;
+
+}
+
+a{
+  text-decoration:none ;
+}
+
+.container{
+  max-width: 1310px;
+  margin:0 auto;
+  padding: 0 50px;
+  
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+}
