--- a/src/styles/Drink.css
+++ b/src/styles/Drink.css
@@ -4,3 +4,16 @@
     padding-bottom: 25px;
  
 }
+
+.grid-container{
+    max-width: 1310px;
+       margin:0 auto;
+       padding: 0 50px;
+   }
+
+   .container-drinks{
+    max-width: 1310px;
+    margin:0 auto;
+    padding: 0 50px;
+    padding-bottom: 20px;
+}
