--- a/src/styles/ListItem.css
+++ b/src/styles/ListItem.css
@@ -12,7 +12,7 @@
 .list-items .un-list .list-list{
     display: flex;
     padding: 10 px 5px;
-    border-bottom: 1 px dashed red;
+    border-bottom: 1 px dashed blue;
 
 }
 
@@ -22,3 +22,6 @@
    
 }
 
+h3{
+    color:#8d7612 ;
+}
