--- a/src/styles/Sides.css
+++ b/src/styles/Sides.css
@@ -4,3 +4,18 @@
 
 
 }
+
+.container-sides{
+    max-width: 1310px;
+    margin:0 auto;
+    padding: 0 50px;
+}
+
+
+
+.grid-container{
+    max-width: 1310px;
+       margin:0 auto;
+       padding: 0 50px;
+   }
+   
