--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .heading-secondary{
 
   color: mediumaquamarine;
-  font-size: 30px;
+  font-size: 50px;
   padding-top: 20px;
 }
 
@@ -43,4 +43,9 @@ a{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 30px;
+}
+
+
+h3{
+  font-size: 30px;
 }
