--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 .contact{
     min-height: 100vh;
-    background-color: rgb(249, 216, 209);
+    background-color: rgb(255, 248, 246);
     padding: 50px;
     text-align: center;
 }
@@ -35,7 +35,7 @@ box-sizing: border-box;
 .contact-form h3{
     font-size: 30px;
     margin-bottom: 20px;
-    color: purple;
+    color: rgb(107, 77, 73);
 }
 
 .form-group{
