--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -69,6 +69,13 @@
   width: 70px;
   margin: 5px;
 }
+
+.navbar :hover{
+  color: orange;
+  transition: 0.2s ease;
+  
+}
+
 @media only screen and (max-width: 900px) {
   .navbar .rightSide a {
     width: 70px;
