--- a/src/styles/ListItem.css
+++ b/src/styles/ListItem.css
@@ -27,3 +27,10 @@ h3, h4{
     padding: 4px;
 }
 
+.list-items img{
+width: 150px;
+height: 150px;
+border-radius: 50%;
+margin-right: 20px;
+margin-bottom: 30px;
+}
