--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -24,3 +24,23 @@ font-size: max(1vw,12px) ;
     background-color:#e2e2e2;
     border:none;
  }
+
+ .cart-bottom{
+    margin-top: 80px;
+    display: flex;
+   justify-content: space-between;
+   gap: max(12vw,20px);
+ }
+
+ .cart-total{
+    flex: 0.2;
+    display: flex;
+    flex-direction: column;
+    gap:40px;
+ }
+
+ .cart-totals-details{
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+ }
