menu price update

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -44,3 +44,9 @@ font-size: max(1vw,12px) ;
     justify-content: space-between;
     color: #555;
  }
+
+ @media (max-width:750px) {
+   .cart-bottom{
+      flex-direction: column-reverse;
+   }
+ }
