--- a/src/styles/Order.css
+++ b/src/styles/Order.css
@@ -1,5 +1,42 @@
-.order h1{
-    color: red;
-    text-align: center;
-   padding: 10px;
+.place-order {
+    display:flex;
+    align-items: start;
+    gap: 50%;
+    margin-top: 80px;
+
 }
+
+.place-order-left {
+    width: 100%;
+    max-width: max(30%, 500px);
+}
+
+.place-order-left .title {
+ font-size: 30px;
+   font-weight:600 ;
+   margin-bottom: 50px;
+}
+
+.place-order-left input {
+
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 15px;
+    border: 3px solid #c5c5c5;
+    border-radius: 6px ;
+    outline-color: blue;
+}
+
+.place-order-left .multi-fields{
+    display: flex;
+    gap:10px;
+
+}
+
+.place-order-right {
+    margin-right: 50px;
+    width: 100%;
+    max-width: max (40%, 500px);
+
+}
+
