--- a/src/styles/Order.css
+++ b/src/styles/Order.css
@@ -1,7 +1,7 @@
 .place-order {
     display:flex;
     align-items: start;
-    gap: 50%;
+    gap: 10%;
     margin-top: 80px;
 
 }
@@ -14,11 +14,27 @@
 
 }
 
+
+.place-order-middle{
+ 
+
+    width: 100%;
+    max-width: max(30%, 500px);
+    padding-left: 5%;
+    margin-bottom: 11%;
+}
+
 .place-order-left .title {
  font-size: 30px;
    font-weight:600 ;
    margin-bottom: 50px;
 }
+
+.place-order-middle .title {
+    font-size: 30px;
+      font-weight:600 ;
+      margin-bottom: 50px;
+   }
 
 .place-order-left input {
 
@@ -27,10 +43,27 @@
     padding: 15px;
     border: 3px solid #c5c5c5;
     border-radius: 6px ;
-    outline-color: blue;
+    
 }
 
+.place-order-middle input {
+
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 15px;
+    border: 3px solid #c5c5c5;
+    border-radius: 6px ;
+  
+}
+
+
 .place-order-left .multi-fields{
+    display: flex;
+    gap:10px;
+
+}
+
+.place-order-middle .multi-fields{
     display: flex;
     gap:10px;
 
