--- a/src/styles/TopImage.css
+++ b/src/styles/TopImage.css
@@ -29,6 +29,18 @@ padding-top: 22%;
 }
 
 
-
+@media only screen and (max-width: 768px) {
+    .heading-menu {
+        font-size: 60px; 
+    }
+    .text-menu {
+        font-size: 20px; 
+        padding: 5px; 
+    }
+    .container-menu {
+        padding: 0 50px; 
+        padding-top: 10%; 
+    }
+}
 
 
