--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,67 +1,79 @@
-
-
-
 .about {
-    width: 100%;
-    height: 200vh;
-    display: flex;
-    flex-direction:column;
-    background-color: white;
-   
+  width: 100%;
+  height: auto; 
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
 
-  }
-  
-  .logo {
-    
-    width: auto;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.logo {
+  width: auto;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-    
+.aboutBottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+}
 
-  }
+.about .aboutBottom h1 {
+  font-weight: 400;
+  font-size: 4rem;
+  color: black;
+  margin-top: 2rem; 
+}
+
+.about .aboutBottom p {
+  font-size: 1.7rem;
+  width: 60%;
+  padding: 1rem;
+}
+
+.gallery-image {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+}
+
+.gallery-image img {
+  width: 32%;
+  height: auto;
+  margin: 0.5rem; 
+  border-radius: 5%;
+}
 
 
-  
-  .aboutBottom {
-    display: flex;
-    flex-direction: column;
-    height: 60%;
-    align-items: center;
-    margin-top: 5rem;
-   
-  }
-  
-
+@media only screen and (max-width: 768px) {
   .about .aboutBottom h1 {
-    font-weight: 400;
-    font-size: 4rem;
-    color: black;
-    height: 2rem;
-    justify-content: center;
-    transform: translateY(-90px);
+    font-size: 3rem;
   }
- 
-
-
+  
   .about .aboutBottom p {
-    font-size: 1.7rem;
+    font-size: 1.3rem;
+    width: 80%;
+  }
+  
+  .gallery-image img {
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .about .aboutBottom h1 {
+    font-size: 2.5rem;
+  }
+  
+  .about .aboutBottom p {
+    font-size: 1.1rem;
+    width: 90%;
+  }
+  
+  .gallery-image img {
     width: 60%;
-    padding: 1rem;
-
   }
-
-
-    .gallery-image {
-    img {
-      width: 32%; 
-      height: 30em; 
-      margin: 0; 
-      padding: 0.8rem;
-      border-radius: 8%;
-    }
-  }
-
-
+}
