--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,25 +1,23 @@
 .home {
   width: 100%;
   height: 100%;
+  
+ 
 }
 
-video {
+.video-bg {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto; 
 }
 
 .content {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 140px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  top: 60%; 
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1; 
+  text-align: center;
   color: white;
-  z-index: 0;
 }
 
 .startbutton {
@@ -30,7 +28,7 @@ video {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 2rem;
+  font-size: 1.2rem;
   border-radius: 20px;
 }
 
@@ -45,23 +43,23 @@ video {
 }
 
 .startHeader {
-  font-size: 5rem;
+  font-size: 4.5em; 
 }
 
 .startText {
   font-size: 2.5rem;
 }
 
-.container-aboutUs .aboutParagraph {
+.aboutParagraph {
   font-size: 2.6rem;
-  height: 30%;
-  display:flex;
+  text-align: center; 
 }
 
 .container-aboutUs {
   background-color: rgb(249, 216, 209);
   padding: 16vh;
-  display:flex;
+  display: flex;
+  justify-content: center; 
 }
 
 h3 {
@@ -206,4 +204,47 @@ h3 {
 
 .open-time h4 {
   color: black;
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .aboutParagraph {
+    font-size: 2rem; 
+    max-width: 80%; 
+  }
+
+  .content {
+    top: 40%; 
+  }
+  
+  .startHeader {
+    font-size: 2em; 
+  }
+  
+  .startText {
+    font-size: 1.2em; 
+  }
+  
+  .startbutton {
+    font-size: 1em; 
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .content {
+    top: 30%; 
+  }
+  
+  .startHeader {
+    font-size: 1.5em; 
+  }
+  
+  .startText {
+    font-size: 1em; 
+  }
+  
+  .startbutton {
+    font-size: 0.8em; 
+  }
 }
