--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,81 +1,74 @@
 header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	height: 140px;
-	padding: 0 2rem;
-	background-color: black;
-	
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 140px;
+  padding: 0 2rem;
+  background-color: black;
+  z-index: 99;
 }
 
 nav a {
-	margin: 0 1rem;
-	color: white;
-	text-decoration: none;
+  margin: 0 1rem;
+  color: white;
+  text-decoration: none;
   font-size: 20px;
 }
 
 nav a:hover {
-	color: orange;
+  color: orange;
 }
-
 
 header .nav-btn {
-	padding: 5px;
-	cursor: pointer;
-	background: transparent;
-	border: none;
-	outline: none;
-  	color: whited;
-	visibility: hidden;
-	opacity: 0;
-	font-size: 1.8rem;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: whited;
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
 }
-
 
 header div,
 nav {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
-
-
 @media only screen and (max-width: 1024px) {
-	header .nav-btn {
-		visibility: visible;
-		opacity: 1;
-	}
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
 
-	header nav {
-		position: fixed;
-		top: -100vh;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		background-color: black;
-		transition: 1s;
-	}
+  header nav {
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: black;
+    transition: 1s;
+  }
 
-	header .responsive_nav {
-		transform: translateY(100vh);
-	
-	}
+  header .responsive_nav {
+    transform: translateY(100vh);
+  }
 
+  nav .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
 
-	nav .nav-close-btn {
-		position: absolute;
-		top: 2rem;
-		right: 2rem;
-	}
-
-	nav a {
-		font-size: 1.5rem;
-	}
+  nav a {
+    font-size: 1.5rem;
+  }
 }
