--- a/src/styles/Happenings.css
+++ b/src/styles/Happenings.css
@@ -1,3 +1,4 @@
+
 .happenings h1{
     font-size: 50px;
     text-align: center;
@@ -10,8 +11,9 @@
     font-size: 25px;
     line-height: 35px;
     text-align: center;
-    width: 1800px;
-    padding: 15px;
+    font-size: 1.7rem;
+    width: auto;
+    padding: 1rem;
     
 }
 
