--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   box-sizing: border-box;
+  padding-top: 120px;
 }
 
 .heading-secondary {
