--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,14 +1,14 @@
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 140px;
-  padding: 0 2rem;
   background-color: black;
-  z-index: 99;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
   top: 0;
-  width: 100%;
+  z-index: 9999;
 }
 
 nav a {
