--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 .App {
   width: 100%;
-  height: 100%;
+ 
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   box-sizing: border-box;
   padding-top: 120px;
+  min-height: 100vh;
 }
 
 .heading-secondary {
